--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,6 +1,6 @@
 spring:
   r2dbc:
-    url: r2dbc:mysql://43.201.254.36:3306/user_db?useUnicode=true&characterEncoding=utf8&useSSL=false&serverTimezone=Asia/Seoul
+    url: r2dbc:mysql://43.201.254.36:3306/user_db?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Seoul
     username: user_app
     password: ssemchelin01
     pool:
