--- a/src/main/resources/application-local.yml
+++ b/src/main/resources/application-local.yml
@@ -1,8 +1,8 @@
 spring:
   r2dbc:
-    url: r2dbc:mysql://43.201.254.36:3306/user_db?useUnicode=true&characterEncoding=utf8&serverTimezone=Asia/Seoul
-    username: user_app
-    password: ssemchelin01
+    url: r2dbc:mysql://127.0.0.1:13306/staff_db
+    username: staff_app
+    password: ssemchelin01!
     pool:
       max-size: 100
       validation-query: SELECT 1
